--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QueueSystemServer_GUI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" ResizeMode="CanMinimize"
+        WindowState="Maximized" WindowStyle="SingleBorderWindow" ShowInTaskbar="True"
+        WindowStartupLocation="CenterScreen" >
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="75"/>
@@ -15,9 +17,28 @@
             <RowDefinition Height="75"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Orientation="Vertical" Background="#0b2239">
-
-        </StackPanel>
+        <Grid Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Background="#0b2239">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="75"/>
+                </Grid.RowDefinitions>
+                <StackPanel>
+                    <StackPanel Height="75" >
+                        <Image Source="/Icons/line.png" Width="32px" HorizontalAlignment="Center" Margin="0 21 0 0" VerticalAlignment="Center"/>
+                    </StackPanel>
+                    <StackPanel Height="75">
+                        <Image Source="/Icons/Home.png" Width="32px" HorizontalAlignment="Center" Margin="0 21 0 0" VerticalAlignment="Center"/>
+                    </StackPanel>
+                    <StackPanel Height="75">
+                        <Image Source="/Icons/customer-support.png" Width="32px" HorizontalAlignment="Center" Margin="0 21 0 0" VerticalAlignment="Center"/>
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel Grid.Row="1" Height="75" VerticalAlignment="Bottom">
+                    <Image Source="/Icons/power.png" Width="32px" HorizontalAlignment="Center" Margin="0 21 0 0" VerticalAlignment="Center"/>
+                </StackPanel>
+            </Grid>
+        </Grid>
         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="0" Background="Gray">
             
         </StackPanel>
